<resources>
    <string name="app_name">ALL MIGHT COMICS...</string>
    <string name="dcComics">DC</string>
    <string name="marvel">Marvel</string>
    <string name="manga">Manga</string>
    <string name="image">Image</string>
    <string name="dark">Dark</string>
    <string name="vertigo">Vertigo</string>
    <string name="aviso">LA MAYORIA DE LOS LINKS EN ESTA APP SON TOMADOS DE OTRAS FUENTES CUALQUIER PROBLEMAS</string>
    <string name="aviso2">CON LOS LINKS DUDAS O SUGERENCIAS MANDAR UN CORREO A carlitox_r20_banana@hotmail.com</string>
    <string name="otros">Otros</string>
    <string name="abrir">OPEN/ABRIR</string>
    <string name="recomendacione">RECOMENDACIONES</string>
    <string name="masreco">MAS RECOMENDACIONES</string>
    <string name="Categorias">CATEGORIAS</string>
    <string name="Multi">Multi</string>
    <string name="anime">Anime</string>
</resources>
