<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/aviso1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/aviso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aviso"
                android:textAlignment="center"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/aviso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aviso2"
                android:textAlignment="center"
                android:textStyle="bold|italic" />

            <ImageButton
                android:id="@+id/dcComics"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/dcComics"
                android:onClick="iralcomic"
                android:scaleType="fitXY"
                android:src="@mipmap/dc2" />

            <ImageButton
                android:id="@+id/marvel"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/marvel"
                android:onClick="iralcomic"
                android:scaleType="fitXY"
                android:src="@mipmap/marvel1" />

            <ImageButton
                android:id="@+id/manga"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/manga"
                android:onClick="iralcomic"
                android:scaleType="fitXY"
                android:src="@mipmap/manga1" />


            <ImageButton
                android:id="@+id/darkHorse"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/dark"
                android:onClick="iralcomic"
                android:scaleType="fitXY"
                android:src="@mipmap/darkhourse1" />

            <ImageButton
                android:id="@+id/imageComics"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/image"
                android:onClick="iralcomic"
                android:scaleType="fitXY"
                android:src="@mipmap/image1" />

            <ImageButton
                android:id="@+id/vertigo"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/vertigo"
                android:onClick="iralcomic"
                android:scaleType="fitXY"
                android:src="@mipmap/vertigo2" />


            <ImageButton
                android:id="@+id/idwComics"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@android:color/transparent"
                android:onClick="iralcomic"
                android:scaleType="fitXY"
                android:src="@mipmap/idw2" />

            <ImageButton
                android:id="@+id/others"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:text="Otros" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>