<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Negro"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/recomendacione"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/jide" />

    <ListView
        android:id="@+id/listMain"
        android:layout_width="match_parent"
        android:layout_height="484dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:divider="#404040"
        android:dividerHeight="2dp"
        android:foregroundGravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_above="@+id/listMain"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/recomendacione"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/Negro"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="320dp"
                android:layout_height="match_parent"
                android:layout_alignEnd="@+id/textView"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:background="?android:attr/colorActivatedHighlight"
                android:onClick="visitar"
                android:text="@string/Categorias"
                android:textColor="?android:attr/colorForeground" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="53dp"
                android:layout_weight="1"
                android:background="#0b8e7b"
                android:onClick="recargarlista"
                android:text="@string/masreco" />

        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView"
            android:layout_alignParentStart="true"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-5146175048698339/3586112095"></com.google.android.gms.ads.AdView>

    </LinearLayout>

</RelativeLayout>